# tynding

./: .Rbuildignore  .gitignore  DESCRIPTION  LICENSE  LICENSE.md  NAMESPACE  README.md  _pkgdown.yml  justfile
.github/workflows/: R-CMD-check.yaml  air.yaml  install.yaml  lint.yaml  rust.yaml  tests.yaml
R/: compile.R  extendr-wrappers.R  is_valid.R  write.R
man/: is_valid_typst.Rd  typst_compile.Rd  typst_compile_rust.Rd  typst_write.Rd
src/: Makevars.in  Makevars.win.in  entrypoint.c  r2typ-win.def
src/rust/: Cargo.toml
src/rust/src/: fonts.rs  inputs.rs  lib.rs  multipage.rs  output.rs  standard.rs  write.rs
tests/: testthat.R
tests/testthat/: test-complete_usage.R  test-is_valid.R  test-typst.R  test-typst_cli.R
tests/testthat/typst/: example-1.typ  example-2.typ  example-4.typ
tests/testthat/typst/subdir/: example-3.typ
vignettes/: advanced-example.qmd  extending-tynding.qmd
