[package]
name = "tynding"
version = "0.1.0"
edition = "2021"
rust-version = "1.89"
publish = false

[lib]
crate-type = ["staticlib"]
name = "tynding"

[dependencies]
extendr-api = "0.8.1"
typst = "0.14.2"
typst-as-lib = { version = "0.15.4", features = ["typst-html"] }
typst-assets = { version = "0.14.2", features = ["fonts"] }
typst-html = "0.14.2"
typst-pdf = "0.14.2"
typst-render = "0.14.2"
typst-svg = "0.14.2"

[profile.release]
lto = true
codegen-units = 1
